gccida/g1/compute_use_by_pseudos
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/compute_use_by_pseudos/src/reload1.c:1062:25: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v6 = ( ( unsigned int)( mode_class_0[*( ( unsigned __int8 *)cfun->emit->x_regno_reg_rtx[v11] + 2)] - 5) < 2) + 1; 
                        ^~~~~~~~~~~~
                        mode_class
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/compute_use_by_pseudos/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/compute_use_by_pseudos/src/obj/reload1.o] Error 1
